# notepad-plus-plus-macos

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
lexilla/lexers/: LexUser.cxx
linux/: CMakeLists.txt
linux/src/: autocomplete.c  autocomplete.h  backup.c  cliphistory.c  cliphistory.h  columneditor.c  columneditor.h  docmap.c  docmap.h  editor.c  editor.h  findreplace.c  findreplace.h  funclist.c  funclist.h  gitgutter.c  gitgutter.h  lexer.c  lexer.h  macro.c  macro.h  main.c  prefs.c  prefs.h  sci_c.h  searchresults.c  session.c  session.h  shortcutmap.c  shortcutmap.h  styleeditor.c  stylestore.c  stylestore.h  udl.c  udl.h  workspace.c  workspace.h
regex/: NppRegexSearch.cxx  NppRegexSearch.h
regex/test/: run.sh  test_npp_regex.cxx
resources/: Info.plist  npp.icns
resources/en.lproj/: InfoPlist.strings
resources/localization/: abkhazian.xml  afrikaans.xml  albanian.xml  amharic.xml  arabic.xml  aragonese.xml  aranese.xml  armenian.xml  assamese.xml  aymara.xml  azerbaijani.xml  bambara.xml  basque.xml  belarusian.xml  bengali.xml  bhojpuri.xml  bosnian.xml  brazilian_portuguese.xml  breton.xml  bulgarian.xml  catalan.xml  cebuano.xml  chichewa.xml  chineseSimplified.xml  corsican.xml  croatian.xml  czech.xml  danish.xml  dhivehi.xml  dogri.xml  dutch.xml  english.xml  english_customizable.xml  esperanto.xml  estonian.xml  ewe.xml  extremaduran.xml  farsi.xml  finnish.xml  french.xml  (+97 more)
scintilla/cocoa/: ScintillaView.h  ScintillaView.mm
src/: AppDelegate.mm  DocumentListPanel.h  DocumentListPanel.mm  EditorView.h  EditorView.mm  FindWindow.mm  FolderTreePanel.mm  MainWindowController.mm  MenuBuilder.mm  NPPBatchDialog.h  NPPBatchDialog.mm  NPPBatchRunner.h  NPPBatchRunner.mm  NppApplication.mm  NppBuiltinLanguages.h  NppBuiltinLanguages.mm  NppLangsManager.mm  NppLocalizer.mm  NppPluginInterfaceMac.h  NppPluginManager.mm  NppTabBar.h  NppTabBar.mm  NppThemeManager.h  NppThemeManager.mm  PreferencesWindowController.h  PreferencesWindowController.mm  ProjectPanel.h  ProjectPanel.mm  SearchEngine.mm  SearchResultsPanel.mm  UserDefineLangManager.mm
